VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc15Up.err
[8MB/2.258GB][  0%][>                                                 ][2.667MB/s]  [40MB/2.258GB][  1%][>                                                 ][10MB/s]  [64MB/2.258GB][  2%][=>                                                ][12.8MB/s]  [88MB/2.258GB][  3%][=>                                                ][14.67MB/s]  [112MB/2.258GB][  4%][==>                                               ][16MB/s]  [136MB/2.258GB][  5%][==>                                               ][17MB/s]  [152MB/2.258GB][  6%][===>                                              ][16.89MB/s]  [176MB/2.258GB][  7%][===>                                              ][17.6MB/s]  [200MB/2.258GB][  8%][====>                                             ][18.18MB/s]  [224MB/2.258GB][  9%][====>                                             ][18.67MB/s]  [240MB/2.258GB][ 10%][=====>                                            ][18.46MB/s]  [264MB/2.258GB][ 11%][=====>                                            ][18.86MB/s]  [280MB/2.258GB][ 12%][======>                                           ][18.67MB/s]  [304MB/2.258GB][ 13%][======>                                           ][19MB/s]  [328MB/2.258GB][ 14%][=======>                                          ][19.29MB/s]  [352MB/2.258GB][ 15%][=======>                                          ][19.56MB/s]  [376MB/2.258GB][ 16%][========>                                         ][19.79MB/s]  [400MB/2.258GB][ 17%][========>                                         ][20MB/s]  [416MB/2.258GB][ 17%][========>                                         ][19.81MB/s]  [440MB/2.258GB][ 19%][=========>                                        ][20MB/s]  [456MB/2.258GB][ 19%][=========>                                        ][19.83MB/s]  [480MB/2.258GB][ 20%][==========>                                       ][20MB/s]  [496MB/2.258GB][ 21%][==========>                                       ][19.84MB/s]  [520MB/2.258GB][ 22%][===========>                                      ][20MB/s]  [536MB/2.258GB][ 23%][===========>                                      ][19.85MB/s]  [552MB/2.258GB][ 23%][===========>                                      ][19.71MB/s]  [576MB/2.258GB][ 24%][============>                                     ][19.86MB/s]  [592MB/2.258GB][ 25%][============>                                     ][19.73MB/s]  [616MB/2.258GB][ 26%][=============>                                    ][19.87MB/s]  [632MB/2.258GB][ 27%][=============>                                    ][19.75MB/s]  [648MB/2.258GB][ 28%][==============>                                   ][19.64MB/s]  [672MB/2.258GB][ 29%][==============>                                   ][19.76MB/s]  [688MB/2.258GB][ 29%][==============>                                   ][19.66MB/s]  [712MB/2.258GB][ 30%][===============>                                  ][19.78MB/s]  [728MB/2.258GB][ 31%][===============>                                  ][19.68MB/s]  [752MB/2.258GB][ 32%][================>                                 ][19.79MB/s]  [768MB/2.258GB][ 33%][================>                                 ][19.69MB/s]  [792MB/2.258GB][ 34%][=================>                                ][19.8MB/s]  [808MB/2.258GB][ 34%][=================>                                ][19.71MB/s]  [824MB/2.258GB][ 35%][=================>                                ][19.62MB/s]  [848MB/2.258GB][ 36%][==================>                               ][19.72MB/s]  [872MB/2.258GB][ 37%][==================>                               ][19.82MB/s]  [888MB/2.258GB][ 38%][===================>                              ][19.73MB/s]  [912MB/2.258GB][ 39%][===================>                              ][19.83MB/s]  [936MB/2.258GB][ 40%][====================>                             ][19.91MB/s]  [960MB/2.258GB][ 41%][====================>                             ][20MB/s]  [984MB/2.258GB][ 42%][=====================>                            ][20.08MB/s]  [1000MB/2.258GB][ 43%][=====================>                            ][20MB/s]  [1024MB/2.258GB][ 44%][======================>                           ][20.08MB/s]  [1.023GB/2.258GB][ 45%][======================>                           ][20.15MB/s]  [1.039GB/2.258GB][ 46%][=======================>                          ][20.08MB/s]  [1.055GB/2.258GB][ 46%][=======================>                          ][20MB/s]  [1.078GB/2.258GB][ 47%][=======================>                          ][20.07MB/s]  [1.102GB/2.258GB][ 48%][========================>                         ][20.14MB/s]  [1.117GB/2.258GB][ 49%][========================>                         ][20.07MB/s]  [1.141GB/2.258GB][ 50%][=========================>                        ][20.14MB/s]  [1.164GB/2.258GB][ 51%][=========================>                        ][20.2MB/s]  [1.188GB/2.258GB][ 52%][==========================>                       ][20.27MB/s]  [1.211GB/2.258GB][ 53%][==========================>                       ][20.33MB/s]  [1.234GB/2.258GB][ 54%][===========================>                      ][20.39MB/s]  [1.258GB/2.258GB][ 55%][===========================>                      ][20.44MB/s]  [1.281GB/2.258GB][ 56%][============================>                     ][20.5MB/s]  [1.305GB/2.258GB][ 57%][============================>                     ][20.55MB/s]  [1.328GB/2.258GB][ 58%][=============================>                    ][20.61MB/s]  [1.352GB/2.258GB][ 59%][=============================>                    ][20.66MB/s]  [1.375GB/2.258GB][ 60%][==============================>                   ][20.71MB/s]  [1.406GB/2.258GB][ 62%][===============================>                  ][20.87MB/s]  [1.438GB/2.258GB][ 63%][===============================>                  ][21.03MB/s]  [1.469GB/2.258GB][ 65%][================================>                 ][21.18MB/s]  [1.5GB/2.258GB][ 66%][=================================>                ][21.33MB/s]  [1.531GB/2.258GB][ 67%][=================================>                ][21.48MB/s]  [1.57GB/2.258GB][ 69%][==================================>               ][21.73MB/s]  [1.602GB/2.258GB][ 70%][===================================>              ][21.87MB/s]  [1.633GB/2.258GB][ 72%][====================================>             ][22MB/s]  [1.672GB/2.258GB][ 74%][=====================================>            ][22.23MB/s]  [1.703GB/2.258GB][ 75%][=====================================>            ][22.36MB/s]  [1.742GB/2.258GB][ 77%][======================================>           ][22.58MB/s]  [1.781GB/2.258GB][ 78%][=======================================>          ][22.8MB/s]  [1.82GB/2.258GB][ 80%][========================================>         ][23.01MB/s]  [1.867GB/2.258GB][ 82%][=========================================>        ][23.32MB/s]  [1.906GB/2.258GB][ 84%][==========================================>       ][23.52MB/s]  [1.953GB/2.258GB][ 86%][===========================================>      ][23.81MB/s]  [1.992GB/2.258GB][ 88%][============================================>     ][24MB/s]  [2.039GB/2.258GB][ 90%][=============================================>    ][24.28MB/s]  [2.078GB/2.258GB][ 92%][==============================================>   ][24.46MB/s]  [2.109GB/2.258GB][ 93%][==============================================>   ][24.55MB/s]  [2.141GB/2.258GB][ 94%][===============================================>  ][24.63MB/s]  [2.18GB/2.258GB][ 96%][================================================> ][24.8MB/s]  [2.211GB/2.258GB][ 97%][================================================> ][24.88MB/s]  [2.242GB/2.258GB][ 99%][=================================================>][24.96MB/s]  [2.258GB/2.258GB][100%][==================================================][25.14MB/s]  [2.258GB/2.258GB][100%][==================================================][25.14MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_32593/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_32593/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
